ops/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  selector:
    app: weather
  ports:
  - port: 5000
    targetPort: 5000
