ops/manifests/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weather-gateway
spec:
  selector:
      istio: ingressgateway
  servers:
    - hosts:
      - "weather.blackbyte.live"
      port:
        number: 80
        name: http
        protocol: HTTP
